<resources >
    <string name="google_maps_key">AIzaSyDtQGwWsJLbhl20BYcL0NH7nzddUzpLWlk</string>
    <string name="google_maps_key_demo">AIzaSyD8E3980HszFQXWP_zAYcjEnsDXX25FleE</string>
    <string name="enter_dob_small_case">Enter DOB</string>
    <string name="storeid_txt">PLEASE ENTER YOUR STORE ID</string>
    <string name="my_badges">MY BADGES</string>
    <string name="crop">CROP</string>
    <string name="end_text">ENDING ON XX.XX.XXXX</string>
    <string name="header_text">HEADER</string>
    <string name="cart">CART</string>
     <string name="mycart_header_text">MY CART</string>
    <string name="my_quopns">MY QUOPNS</string>
    <string name="history">MY HISTORY</string>
    <string name="email_id_text">Email ID</string>
    <string name="name_text">Name</string>
    <string name="next_text">NEXT</string>
    <string name="skip_regn"><u>SKIP</u></string>
    <string name="skip_regn_msg"><u>Skipping, please wait</u></string>
    <string name="progress_registering_txt">Registering User</string>
    <string name="blank_mobilenumber_validation">Enter your friend\'s mobile number so that we can send them an invite</string>
    <string name="inviteuser_gender_validation">Kindly indicate gender so that we can send your friend personalized offers</string>
    <string name="please_connect_to_internet">Please check your internet connection and try again</string>
    <string name="image_capture_failed">Oops! Image Not Captured. Please try again</string>
    <string name="dialog_title_notification_status">Notification Status</string>
    <string name="error_unable_to_download">Unable to download personal message</string>
    <string name="message_is_not_available">Message is not available</string>
    <string name="video_is_not_available">Video is not available</string>
    <string name="store_id_is_pressed">Store id is pressed</string>
    <string name="lable_app_upgrade">Now get more with your Quopn Wallet! Update to earn Cashback on your shopping via Quopn</string>
    <string name="message_forcefully_upgrade">All our Quopns have moved to the newer version. You need to upgrade your app to access them</string>
    <string name="message_not_forcefully_upgrade">Our Quopns eagerly want you to try out the new version. Don\'t leave them hanging</string>
     <string name="caption_button_upgrade">Upgrade</string>
    <string name="caption_button_quit">Exit</string>
    <string name="caption_button_continue">Continue</string>
     <string name="caption_savings_approx">MINIMUM SAVINGS</string>
    <string name="caption_savings">SAVINGS</string>
    <string name="app_name">Quopn</string>
    <string name="otp_message">We have sent you a PIN via SMS. You will need your Wallet ID and PIN to redeem your Quopns</string>
    <string name="yourname">NAME</string>
    <string name="yourmobileno">MOBILE NUMBER</string>
    <string name="otp_txt">PIN</string>
    <string name="enter_otp">ENTER OTP</string>
    <string name="trans_pass">SET TRANSACTION PIN</string>
    <string name="re_enter_trans_pass">RE-ENTER TRANSACTION PIN</string>
    <string name="enter_dob">DATE OF BIRTH</string>
    <string name="enter_email">EMAIL*</string>
    <string name="verifying_txt">VERIFYING USER</string>
    <string name="enter_trans_pass">ENTER TRANSACTION PIN</string>
    <string name="resendotp_txt"><u>RESEND OTP</u></string>
    <string name="resendpin_txt"><u>RESEND PIN</u></string>
    <string name="resendotp">RESEND OTP</string>
    <string name="confirmotp">CONFIRM OTP</string>
    <string name="please_enter_otp">PLEASE ENTER YOUR OTP</string>
    <string name="shmart_registration_tnc_1">"I agree to My Wallet"</string>
    <string name="i_agree_to_terms_and_conditions"><u>Terms of Use</u></string>
    <string name="ucn_txt">Please enter UCN to redeem your Quopn</string>
    <string name="call_txt">Please ensure that the mobile number you are using is the same one you have registered with</string>
    <string name="new_quopns_soon">YOUR PATIENCE SHALL BE REWARDED!\r\nFOR NOW CHOOSE FROM OUR\r\n CURRENT OFFERS\r\n PULL DOWN TO REFRESH</string>
    <string name="expiring_quopns_soon">PHEW! YOU HAVE NO QUOPNS\r\n EXPIRING ANYTIME SOON\r\n PULL DOWN TO REFRESH</string>
    <string name="search_quopns">NO SEARCH RESULTS\r\n PLEASE TRY A DIFFERENT KEYWORD</string>
    <string name="no_notifications">YOU\'VE NO UNREAD NOTIFICATIONS \r\n HOW ABOUT BROWSING THROUGH \r\n SOME QUOPNS IN THE MEANTIME?</string>
    <string name="browse_current_categories">BROWSE CURRENT QUOPNS</string>
    <string name="search_now">SEARCH NOW</string>
    <string name="grab_a_quopn">GRAB A QUOPN</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="share_txt">SHARE</string>
     <string name="close_txt">CLOSE</string>
     <string name="terms_and_condition_txt">TERMS &amp; CONDITION</string>
    <string name="new_myquopns_soon">NO QUOPNS AVAILABLE</string>
    <string name="text_empty_my_quopns">OUR QUOPNS ARE EXTREMELY EXCITED\r\n TO GET ISSUED BY YOU.\r\n PLEASE DON\'T DISAPPOINT THEM</string>
    <string name="text_empty_my_cart">YOUR CART IS EMPTY!\r\n FILL IT UP QUICKLY BY ADDING YOUR FAVOURITE QUOPNS\r\n PULL DOWN TO REFRESH</string>
    <string name="text_empty_history">NOT SHOPPED YET ?\r\n START BY REDEEMING \r\n YOUR FAVOURITE QUOPNS \r\n &amp; SHOP NOW!</string>
    <string name="loading_myquopns">LOADING QUOPNS...</string>
    <string name="new_history_soon">YOU HAVE NOT REDEEMED ANY QUOPNS IN THE LAST 6 MONTHS</string>
    <string name="new_cart_soon">CART EMPTY</string>
    <string name="select_interest">SELECT INTERESTS</string>
    <string name="select_location">LOCATION</string>
    <string name="btn_submit">SUBMIT</string>
    <string name="btn_save">SAVE</string>
    <string name="take_photo">CLICK NEW</string>
    <string name="choose_photo">SELECT FROM GALLERY</string>
    <string name="cancel">CANCEL</string>
    <string name="main_menu">MAIN MENU</string>
    <string name="mysettings">PROFILE SETTINGS</string>
    <string name="notification">NOTIFICATIONS</string>
    <string name="aboutus">ABOUT US</string>
    <string name="faq">FAQS</string>
    <string name="tnc">TNCS</string>
    <string name="change_pin">GENERATE PIN</string>
    <string name="promo_code">PROMO CODE</string>
    <string name="change_num">CHANGE NUMBER</string>
    <string name="waiting_for_sms">Auto verification of PIN in progress %1$d secs</string>
    <string name="caption_manual_entry">Or else, upon receipt of SMS, enter it in the field above</string>
    <string name="skip_text">SKIP</string>
    <string name="shmart_registration_desc">"Register in 2 easy steps"</string>
    <string name="shmart_registration_otp_hurray">"Hurray! You are 1 step away from Cashback"</string>
    <string name="register_now">REGISTER NOW</string>
    <string name="current_bal"><b>CURRENT BALANCE</b></string>
    <string name="selec_interests">SELECT INTERESTS</string>
    <string name="personal_message">PLAY VIDEO</string>
    <string name="download_message">DOWNLOAD VIDEO</string>
    <string name="skip_message">SKIP</string>
    <string name="registration_bottom_first_text">By using this app, you agree to Quopn\'s</string>
    <string name="registration_bottom_third_text">&amp;</string>
    <string name="registration_terms_message"><u>Terms of Use</u></string>
    <string name="registration_policy_message"><u>Privacy Policy</u></string>
    <string name="invite_user">INVITE USER</string>
    <string name="invite_user_text">Gift your friends a new Quopn Wallet loaded with goodies! Fill in their details and send them an SMS with a link to download the Quopn Wallet. It\'s that Simple!!</string>
    <string name="promo_text">Enter your promo code and unleash the offers inside</string>
    <string name="invite_user_name">NAME</string>
     <string name="select_from_contact">SELECT FROM CONTACTS</string>
    <string name="gen_male_text">MALE</string>
    <string name="gen_female_text">FEMALE</string>
    <string name="rec_personal_msg">RECORD VIDEO</string>
    <string name="send_invite">SEND INVITE</string>
    <string name="legal_clause">**Standard text messaging charges as designated by your telecom operator for your rate plan shall apply, when you send an Invite SMS</string>
    <string name="oldpin_txt">EXISTING PIN</string>
    <string name="newpin_txt">NEW PIN</string>
    <string name="newpinconfirm_txt">RE-ENTER NEW PIN</string>
    <string name="enter_promo_txt">ENTER PROMO CODE</string>
    <string name="newnum_txt">NEW NUMBER</string>
    <string name="profile_settings">PROFILE SETTINGS</string>
    <string name="error_campaign_detials">Error fetching campaign details</string>
    <string name="blank_txnpin_validation">Please enter transaction PIN</string>
    <string name="set_txnpin_validation">Please set your transaction PIN</string>
    <string name="blank_pin_validation">Please enter PIN</string>
    <string name="blank_otp_validation">Please enter OTP sent via SMS to confirm</string>
    <string name="blank_name_validation">Please enter your name</string>
    <string name="blank_mobile_no">Please enter a 10 digit mobile number</string>
    <string name="name_validation">Please enter a valid name</string>
    <string name="name_validation_invite">Please enter name</string>
    <string name="mobileno_validation">Please enter a valid 10 digit mobile number</string>
    <string name="shmart_email_info">Your monthly transaction history will be mailed to this email ID</string>
    <string name="shmart_trans_pwd_info">You will need this PIN to transact through your wallet</string>
    <string name="otp_validation">Please enter the correct PIN</string>
    <string name="pin_validation">Please enter the correct PIN</string>
    <string name="resend_otp_morethan_3times_validation">A few deep breaths and you shall receive your PIN via SMS</string>
    <string name="emailid_validation">Please enter your e-mail; we promise not to spam you</string>
    <string name="entered_emailid_validation">Please check again; there\'s something wrong with that email ID you entered</string>
    <string name="location_validation">Enter your location so we can show Quopn enabled stores around you</string>
    <string name="interest_validation">Tell us your interests so we can try to craft exclusive Quopns for you</string>
    <string name="gender_validation">Please select your gender so we can craft exclusive Quopns for you</string>
    <string name="dob_validation">Please enter your Date of Birth</string>
    <string name="age_validation">You should be above %1$s years</string>
    <string name="oldpin_validation">Please enter a valid PIN</string>
    <string name="title_exception">Oops!</string>
    <string name="desc_exception">There was an unexpected error. If the problem persists, please restart the Quopn Wallet application</string>
    <string name="gift_info_header_message">has sent you a personal video message. Download to view!</string>
    <string name="download_personal_message">DOWNLOAD VIDEO</string>
    <string name="play_personal_message">PLAY VIDEO</string>
    <string name="caption_dismiss_error">SEND ERROR REPORT</string>
    <string name="shmart_op_addmoney">ADD MONEY</string>
    <string name="shmart_op_sendmoney">SEND MONEY</string>
    <string name="shmart_op_transfertobank">TRANSFER TO BANK</string>
    <string name="shmart_op_purchasevouchers">BUY VOUCHERS</string>
    <string name="shmart_op_shopatquopn">SHOP AT STORES</string>
    <string name="shmart_op_mytransactions">MY TRANSACTIONS</string>
    <string name="shmart_op_faqs">FAQs</string>
    <string name="shmart_op_terms">TERMS OF USE</string>
    <string name="shmart_op_settings">SETTINGS</string>
    <string name="t_and_c_promos">For detailed Terms &amp; Conditions, visit our website http://www.quopn.com/promos/</string>
    <string name="rupee_symbol">\u20B9</string>
</resources>