<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_header_height"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:background="@color/common_header_bg_color" >

        <com.quopn.wallet.views.QuopnTextView
            android:id="@+id/header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text=""
            android:textColor="@color/white"
            android:textSize="@dimen/common_header_textsize" 
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    
      <RelativeLayout
        android:id="@+id/saving_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mycart_header2_height"
        android:layout_below="@+id/header_layout"
        android:background="@color/mycart_header2_bg_color"
         >

        <com.quopn.wallet.views.QuopnTextView
            android:id="@+id/saving_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:text="@string/caption_savings"
            android:textColor="@color/white"
            android:textSize="@dimen/mycart_header1_2_textsize" 
            android:layout_centerVertical="true" 
            android:textStyle="bold"/>
        
         <com.quopn.wallet.views.QuopnTextView
            android:id="@+id/saving_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/saving_text1"
            android:layout_marginLeft="70dp"
            android:text="@string/rupee_symbol"
            android:textColor="@color/white"
            android:textSize="12sp" 
            android:layout_centerVertical="true" 
            android:textStyle="bold"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rellay_empty_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header_layout"
        android:layout_centerInParent="true"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/img_empty_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:visibility="visible" />

        <com.quopn.wallet.views.QuopnTextView
            android:id="@+id/text_empty_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_empty_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="@string/loading_myquopns"
            android:textColor="@android:color/darker_gray"
            android:visibility="visible" />

        <com.quopn.wallet.views.QuopnTextView
            android:id="@+id/img_empty_content_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_empty_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@color/white"
            android:visibility="visible" />
    </RelativeLayout>

    <ListView
        android:id="@+id/items"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/saving_layout"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:visibility="visible" 
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="5dp"
        android:dividerHeight="5dp"
        android:divider="@color/app_background" >
    </ListView>

</RelativeLayout>